5.Cloud_Security/deployments/internal-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internal-proxy-deployment
  namespace: default
  labels:
    app: internal-proxy
spec:
  selector:
    matchLabels:
      app: internal-proxy
  template:
    metadata:
      labels:
        app: internal-proxy
    spec:
      containers:
      - name: internal-api
        image: madhuakula/k8s-goat-internal-api
        resources:
          limits:
            cpu: 60m
            memory: 120Mi
          requests:
            cpu: 40m
            memory: 80Mi
        ports:
        - containerPort: 3000
      - name: info-app
        image: madhuakula/k8s-goat-info-app
        resources:
          limits:
            cpu: 40m
            memory: 90Mi
          requests:
            cpu: 40m
            memory: 80Mi
        ports:
        - containerPort: 5000  
---
apiVersion: v1
kind: Service
metadata:
  name: internal-proxy-api-service
  namespace: default
spec:
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    app: internal-proxy
---
apiVersion: v1
kind: Service
metadata:
  name: internal-proxy-info-app-service
  namespace: default
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    nodePort: 30003
  selector:
    app: internal-proxy
