5.Cloud_Security/deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudsecurity-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - '*.kyber.local'
  rules:
  - host: keycloak.kyber.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
  - host: blog.kyber.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress 
            port:
              number: 80
  - host: company.kyber.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-webservice-service
            port:
              number: 3000
  - host: system-monitor.kyber.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: system-monitor-service
            port:
              number: 8080
  - host: health.kyber.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: health-check-service
            port:
              number: 80
  - host: internal-proxy.kyber.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: internal-proxy-api-service
            port:
              number: 3000
